yaml/nginx.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: nginx
spec:
  replicas: 3
  selector:
    matchLabels:
      app: nginx
  template:
    metadata:
      labels:
        app: nginx
    spec:
      containers:
      - name: nginx
        image: stradivirus/nginx-gunicorn
        ports:
        - containerPort: 80
        volumeMounts:
        - name: nginx-config
          mountPath: /etc/nginx/conf.d/default.conf
          subPath: exam.conf
        - name: static-volume
          mountPath: /work/django/exam/staticfiles
        - name: socket-volume
          mountPath: /work/django/exam/run
      volumes:
      - name: nginx-config
        configMap:
          name: nginx-config
      - name: static-volume
        emptyDir: {}
      - name: socket-volume
        emptyDir: {}
